--- a/sis.html
+++ b/sis.html
@@ -10,7 +10,7 @@ RegistrationForm
 </title>
 </head>
 <body>
-<form action="prin.html" method="post">
+<form action="prin.html">
 <div>
 <label>Full Name</label>
 <input type="text" placeholder="Type your name" required/>
